# dev-experiments

SkillForge-Project/cpp/src/: 1_5_producer_consumer.cpp  file_handling.cpp  templates.cpp
SkillForge-Project/interview/: move_copy_raii_dynamic_memory.cpp
SkillForge-Project/linux/ipc/sharedmemory/src/: shm_utils.c
SkillForge-Project/middlewareframework/middlewareframework/: CMakeLists.txt  build.sh  vcpkg.json
SkillForge-Project/middlewareframework/middlewareframework/tests/: CMakeLists.txt
SkillForge-Project/socket_programming/: tcp_client  tcp_client.c  tcp_echo_server  tcp_echo_server.c
libaray-use-demo/: CMakeLists.txt
libaray-use-demo/mylib_shared/: mylib_shared.cpp  mylib_shared.h
libaray-use-demo/mylib_static/: mylib_static.cpp  mylib_static.h
libaray-use-demo/src/: main.cpp
